// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmBalance has the expected html structure before adding props 1`] = `
"<div class=\\"header-balance\\">
   <div class=\\"top\\">
      <div class=\\"icon-container\\">
         <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"icon\\">
      </div>
<div class=\\"total-atoms top-section\\">
   <h3>
      Total Steak
   </h3>
   <h2>
      321.0000…
   </h2>
</div>
<div class=\\"unbonded-atoms top-section\\">
   <h3>
      Available Steak
   </h3>
   <h2>
      123.0000…
   </h2>
</div>
<div class=\\"total-earnings top-section\\">
   <h3>
      Total Earnings
   </h3>
   <h2>
      100
   </h2>
</div>
<div class=\\"total-rewards top-section\\">
   <h3>
      Total Rewards
   </h3>
   <div class=\\"group\\">
      <h2>
         50
      </h2>
      <a href=\\"#/claim\\" class=\\"\\">Claim</a>
   </div>
</div>
</div>
<div class=\\"short-bech32\\">
   <div id=\\"address\\" class=\\"address\\">
      useraddress…6876
   </div>
<div class=\\"copied\\">
   <i class=\\"material-icons\\">check</i><span>Copied</span>
</div>
</div>
<div class=\\"tabs\\"></div>
</div>"
`;

exports[`TmBalance shows correct stats depending on props 1`] = `
"<div class=\\"header-balance\\">
   <div class=\\"top\\">
      <div class=\\"icon-container\\">
         <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"icon\\">
      </div>
<div class=\\"total-atoms top-section\\">
   <h3>
      Total Steak
   </h3>
   <h2>
      321.0000…
   </h2>
</div>
<div class=\\"unbonded-atoms top-section\\">
   <h3>
      Available Steak
   </h3>
   <h2>
      123.0000…
   </h2>
</div>
<div class=\\"total-earnings top-section\\">
   <h3>
      Total Earnings
   </h3>
   <h2>
      1337
   </h2>
</div>
<div class=\\"total-rewards top-section\\">
   <h3>
      Total Rewards
   </h3>
   <div class=\\"group\\">
      <h2>
         1337
      </h2>
      <a href=\\"#/claim\\" class=\\"\\">Claim</a>
   </div>
</div>
</div>
<div class=\\"short-bech32\\">
   <div id=\\"address\\" class=\\"address\\">
      useraddress…6876
   </div>
<div class=\\"copied\\">
   <i class=\\"material-icons\\">check</i><span>Copied</span>
</div>
</div>
<div class=\\"tabs\\"></div>
</div>"
`;
